--- a/src/components/content/styles/Content.module.scss
+++ b/src/components/content/styles/Content.module.scss
@@ -1,14 +1,12 @@
 .article {
-    h1 {
-        font-size: 1.6rem;
-        margin: 15px 0px;
-        text-align: center;
-    }
+    margin: 16px auto;
+    max-width: 680px;
+
     h2 {
-        margin: 15px 5px;
+        margin: 16px 4px 8px;
     }
     p {
-        margin: 15px 0px;
+        margin: 12px 0px;
         text-indent: 8px;
     }
     abbr {
@@ -20,15 +18,19 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        margin: 10px 0px 40px;
+        margin: 12px 0px 40px;
         position: relative;
         width: 100%;
 
+        img {
+            margin: auto;
+            max-width: 100%;
+        }
         figcaption {
             bottom: 0;
             font-size: 0.9em;
             font-style: italic;
-            margin: 5px 0px;
+            margin: 4px 0px;
             position: absolute;
             text-align: center;
             transform: translateY(150%);
@@ -36,11 +38,11 @@
     }
     mark {
         background-color: transparent;
-        padding: 0px 3px;
+        padding: 0px 4px;
     }
     table {
         border-collapse: collapse;
-        margin: 10px 0px;
+        margin: 12px 0px;
 
         th, td {
             border: 1px solid black;
@@ -49,19 +51,46 @@
     }
     video {
         border: 1px solid black;
-        border-radius: 10px;
+        border-radius: 12px;
         box-shadow: 0px 0px 8px black;
-        margin: 10px 0px;
+        margin: 12px 0px;
         width: 100%;
+    }
+    math {
+        font-size: 1.1rem;
+    }
+}
+#title {
+    font-size: 1.2rem;
+    margin-bottom: 16px;
+    text-align: center;
+
+    span {
+        color: #808080;
+        font-size: 1rem;
+        font-style: italic;
     }
 }
 .formula {
-    background-color: #c0c0c0;
+    background-color: var(--box);
     border: 1px solid #9b9b9b;
     border-radius: 5px;
     box-shadow: 2px 2px 2px #0000003f;
     display: block;
-    font-size: 16px;
-    padding: 7px 20px 7px 10px;
+    font-family: inherit;
+    padding: 8px 20px 8px 12px;
+    white-space: pre-line;
     width: max-content;
+}
+.poem {
+    font-family: 'Dancing Script', cursive;
+    font-size: 1.2rem;
+    margin: 12px 0px;
+    white-space: pre-wrap;
+}
+
+@media screen and (max-width: 768px) {
+    .article {
+        margin: 16px 12px;
+    }
 }
