--- a/src/components/main/styles/Nav.module.scss
+++ b/src/components/main/styles/Nav.module.scss
@@ -1,10 +1,16 @@
 .nav {
-    background-color: var(--text-inverted);
+    background-color: var(--background);
     position: fixed;
 
     a {
         color: inherit;
         text-decoration: none;
+    }
+
+    @media (prefers-color-scheme: dark) {
+        img {
+            filter: invert(1);
+        } 
     }
 }
 
@@ -14,14 +20,20 @@
         height: 52px;
         width: 100%;
 
+        h2 {
+            display: none;
+        }
         menu {
+            display: none;
+        }
+        #mainMenu {
             align-items: center;
             display: flex;
-            font-size: .6rem;
+            font-size: 0.6rem;
             height: 100%;
             justify-content: space-around;
             text-align: center;
-
+    
             a {
                 flex: 1 1 0;
             }
@@ -38,13 +50,16 @@
     .nav {
         height: 100%;
         left: 0;
-        margin-top: 60px;
-        padding: 40px 12px;
+        padding: 0px 12px;
         top: 0;
 
+        h2 {
+            padding: 16px 12px;
+        }
         menu {
             display: flex;
             flex-direction: column;
+            margin-top: 60px;
             width: 200px;
 
             a {
@@ -56,7 +71,7 @@
                 padding: 0px 12px;
 
                 &:hover {
-                    background-color: #E6E6E6;
+                    background-color: var(--hover);
                 }
             }
             img {
@@ -65,6 +80,6 @@
         }
     }
     .active {
-        background-color: #E6E6E6;
+        background-color: var(--hover);
     }
 }
