--- a/src/components/main/styles/Search.module.scss
+++ b/src/components/main/styles/Search.module.scss
@@ -1,30 +1,68 @@
+.searchContainer {
+    align-self: flex-start;
+    margin-top: 8px;
+    margin-left: 80px;
+    position: relative;
+    width: 420px;
+}
 .input {
     appearance: none;
     background: url('/assets/icons/search.svg') no-repeat 12px center / 20px;
-    border: 1px solid black;
+    border: 1px solid var(--text);
     border-radius: 32px;
+    color: var(--text);
+    font-size: 1.1rem;
     padding: 12px 12px 12px 44px;
     outline: none;
-    width: 400px;
+    text-overflow: ellipsis;
+    width: 100%;
 
     &:focus {
-        box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+        box-shadow: 0px 0px 8px var(--shadow4);
     }
-    &::placeholder {
-        color: #000000c5;
+
+    @media (prefers-color-scheme: dark) {
+        background: url('/assets/icons/search-dark.svg') no-repeat 12px center / 20px;
+    }
+}
+.results {
+    background-color: var(--background);
+    border: 1px solid var(--text);
+    border-radius: 24px;
+    box-shadow: 0px 0px 8px var(--shadow4);
+    margin-top: 8px;
+    padding: 4px 0px;
+    position: absolute;
+    overflow: hidden;
+    top: 100%;
+    width: 100%;
+
+    a {
+        color: inherit;
+        display: block;
+        padding: 8px 16px 8px 44px;
+        text-decoration: none;
+
+        &:hover {
+            background-color: var(--hover);
+        }
     }
 }
 
 @media screen and (max-width: 768px) {
+    .searchContainer {
+        margin: 16px 0px;
+        width: 100%;
+    }
     .input {
-        display: block;
-        font-size: 1.1rem;
-        font-weight: bold;
-        margin: 8px auto;
         padding: 16px 12px 16px 44px;
-        position: relative;
-        text-overflow: ellipsis;
-        width: 90%;
+    }
+    .results {
+        a {
+            color: inherit;
+            display: block;
+            text-decoration: none;
+        }
     }
 }
 
