--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -15,13 +15,6 @@ header {
         color: inherit;
         text-decoration: none;
     }
-    button {
-        background-color: transparent;
-        border: none;
-        color: inherit;
-        cursor: pointer;
-        font-size: 1rem;
-    }
 }
 main {
     align-items: center;
@@ -35,6 +28,7 @@ main {
     h1 {
         font-size: 2rem;
         margin-bottom: 28px;
+        padding: 0px 8px;
         text-align: center;
 
         &+p {
@@ -62,7 +56,7 @@ main {
             width: 28px;
         }
         &:hover {
-            background-color: #e6e6e6;
+            background-color: #cfcfcf;
         }
     }
     .divider {
@@ -166,12 +160,21 @@ main {
         }
     }
     .error {
-        background-color: rgb(255, 79, 79);
+        background-color: #ff4f4f;
         border-radius: 28px;
-        color: var(--text-inverted);
+        color: #000;
         margin: 8px auto 20px;
         padding: 12px 16px;
         text-align: center;
         width: min(70%, 420px);
+    }
+    &.confirm-email {
+        left: 50%;
+        padding: 12px;
+        position: absolute;
+        text-align: center;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
     }
 }
