--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.language-formula {
+    @apply block w-fit rounded-md border bg-hover px-4 py-2 font-[inherit] dark:bg-hover-dark;
+}
