feat(app): add tables support for contents
also make some other changes:
- update dependencies
- update landing page images
- change branding from 'Pas Academy' to 'PAS Academy' for consistency
- add `authorized` field to session schema
- add break words to content styles
- add className `hidden` from header and nav on print mode
- add `isTeacher` verification
- add `maximum-scale=1` to layout viewport to prevent zoom on input focus on iOS
- add generateMetadata to content routes
- add new hook `useKeyboardFocus`
- add new text to 404 page
- add new types for create content options
- add scroll-smooth to globals.css
- add session expired validation
- add tooltips for editor commands
- add tutorial message to create form
- remove draft schema
- remove French from supported subjects
- remove htmlEscape from content sanitizing
- remove landing page video

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,11 @@
     * {
         @apply border-border;
     }
+
+    html {
+        @apply scroll-smooth;
+    }
+
     body {
         @apply bg-background text-foreground;
     }
@@ -77,6 +82,6 @@
 
 @layer components {
     .language-formula {
-        @apply bg-hover block w-fit rounded-md border px-4 py-2 font-[inherit];
+        @apply block w-fit rounded-md border bg-hover px-4 py-2 font-[inherit];
     }
 }
